parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVEQ
    MULEQ
    PLUSEQ
    RARROW

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement SEMI statements
Rule 3     statements -> statement SEMI
Rule 4     statements -> statement statements
Rule 5     statements -> statement
Rule 6     function_declaration -> type_specifier IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE EQUALS expression
Rule 7     function_declaration -> type_specifier IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 8     parameters -> type_specifier IDENTIFIER COMMA parameters
Rule 9     parameters -> type_specifier IDENTIFIER
Rule 10    parameters -> <empty>
Rule 11    expression -> IDENTIFIER LPAREN arguments RPAREN
Rule 12    expression -> IDENTIFIER PIPE IDENTIFIER LPAREN arguments RPAREN
Rule 13    arguments -> expression COMMA arguments
Rule 14    arguments -> expression
Rule 15    arguments -> <empty>
Rule 16    return_statement -> RETURN expression SEMI
Rule 17    statement -> declaration
Rule 18    statement -> assignment
Rule 19    statement -> function_declaration
Rule 20    statement -> expression
Rule 21    statement -> list_operation
Rule 22    statement -> return_statement
Rule 23    statement -> IMPORT expression AS IDENTIFIER
Rule 24    statement -> IMPORT expression
Rule 25    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 26    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 27    statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRACE statements RBRACE
Rule 28    statement -> FOR LPAREN type_specifier IDENTIFIER IN expression RPAREN LBRACE statements RBRACE
Rule 29    statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE
Rule 30    statement -> WHILE LPAREN expression RPAREN COLON expression LBRACE statements RBRACE
Rule 31    statement -> SWITCH LPAREN expression RPAREN LBRACE case_statements RBRACE
Rule 32    case_statements -> CASE expression COLON statements case_statements
Rule 33    case_statements -> DEFAULT COLON statements
Rule 34    case_statements -> <empty>
Rule 35    statement -> BREAK SEMI
Rule 36    expression -> LBRACKET elements RBRACKET
Rule 37    expression -> LBRACKET RBRACKET
Rule 38    elements -> expression COMMA elements
Rule 39    elements -> expression
Rule 40    expression -> expression LBRACKET expression RBRACKET
Rule 41    list_operation -> IDENTIFIER LBRACKET expression RBRACKET EQUALS expression
Rule 42    list_operation -> IDENTIFIER LBRACKET expression RBRACKET LARROW expression
Rule 43    list_operation -> IDENTIFIER MINUSEQ LBRACKET expression RBRACKET
Rule 44    expression -> IDENTIFIER AT expression
Rule 45    declaration -> type_specifier IDENTIFIER EQUALS expression
Rule 46    type_specifier -> INT
Rule 47    type_specifier -> FLOAT
Rule 48    type_specifier -> BOOL
Rule 49    type_specifier -> STR
Rule 50    type_specifier -> UNTYPED
Rule 51    type_specifier -> VOID
Rule 52    type_specifier -> LIST LT type_specifier GT
Rule 53    type_specifier -> type_specifier LT poke_type GT
Rule 54    poke_type -> FIRE
Rule 55    poke_type -> WATER
Rule 56    poke_type -> GRASS
Rule 57    poke_type -> ELECTRIC
Rule 58    poke_type -> ICE
Rule 59    poke_type -> PSYCHIC
Rule 60    poke_type -> GROUND
Rule 61    poke_type -> FIGHTING
Rule 62    poke_type -> POISON
Rule 63    poke_type -> GHOST
Rule 64    poke_type -> DRAGON
Rule 65    poke_type -> DARK
Rule 66    poke_type -> NORMAL
Rule 67    poke_type -> BUG
Rule 68    poke_type -> FLYING
Rule 69    poke_type -> ROCK
Rule 70    poke_type -> STEEL
Rule 71    poke_type -> FAIRY
Rule 72    assignment -> IDENTIFIER EQUALS expression
Rule 73    expression -> expression PLUS expression
Rule 74    expression -> expression MINUS expression
Rule 75    expression -> expression MUL expression
Rule 76    expression -> expression DIV expression
Rule 77    expression -> INTEGER_LITERAL
Rule 78    expression -> MINUS INTEGER_LITERAL
Rule 79    expression -> FLOAT_LITERAL
Rule 80    expression -> MINUS FLOAT_LITERAL
Rule 81    expression -> TRUE
Rule 82    expression -> FALSE
Rule 83    expression -> STRING_LITERAL
Rule 84    expression -> IDENTIFIER
Rule 85    expression -> expression GT expression
Rule 86    expression -> expression LT expression
Rule 87    expression -> expression EQ expression
Rule 88    expression -> expression GE expression
Rule 89    expression -> expression LE expression
Rule 90    expression -> expression NE expression
Rule 91    expression -> EXCLAMATION expression
Rule 92    expression -> expression AMPERSAND expression
Rule 93    expression -> expression PIPE expression
Rule 94    expression -> expression HAT expression
Rule 95    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

AMPERSAND            : 92
AS                   : 23
AT                   : 44
BOOL                 : 48
BREAK                : 35
BUG                  : 67
CASE                 : 32
COLON                : 30 32 33
COMMA                : 8 13 38
DARK                 : 65
DEFAULT              : 33
DIV                  : 76
DIVEQ                : 
DRAGON               : 64
ELECTRIC             : 57
ELSE                 : 25
EQ                   : 87
EQUALS               : 6 41 45 72
EXCLAMATION          : 91
FAIRY                : 71
FALSE                : 82
FIGHTING             : 61
FIRE                 : 54
FLOAT                : 47
FLOAT_LITERAL        : 79 80
FLYING               : 68
FOR                  : 27 28
GE                   : 88
GHOST                : 63
GRASS                : 56
GROUND               : 60
GT                   : 52 53 85
HAT                  : 94
ICE                  : 58
IDENTIFIER           : 6 7 8 9 11 12 12 23 28 41 42 43 44 45 72 84
IF                   : 25 26
IMPORT               : 23 24
IN                   : 28
INT                  : 46
INTEGER_LITERAL      : 77 78
LARROW               : 42
LBRACE               : 6 7 25 25 26 27 28 29 30 31
LBRACKET             : 36 37 40 41 42 43
LE                   : 89
LIST                 : 52
LPAREN               : 6 7 11 12 25 26 27 28 29 30 31 95
LT                   : 52 53 86
MINUS                : 74 78 80
MINUSEQ              : 43
MUL                  : 75
MULEQ                : 
NE                   : 90
NORMAL               : 66
PIPE                 : 12 93
PLUS                 : 73
PLUSEQ               : 
POISON               : 62
PSYCHIC              : 59
RARROW               : 
RBRACE               : 6 7 25 25 26 27 28 29 30 31
RBRACKET             : 36 37 40 41 42 43
RETURN               : 16
ROCK                 : 69
RPAREN               : 6 7 11 12 25 26 27 28 29 30 31 95
SEMI                 : 2 3 16 27 27 35
STEEL                : 70
STR                  : 49
STRING_LITERAL       : 83
SWITCH               : 31
TRUE                 : 81
UNTYPED              : 50
VOID                 : 51
WATER                : 55
WHILE                : 29 30
error                : 

Nonterminals, with rules where they appear

arguments            : 11 12 13
assignment           : 18
case_statements      : 31 32
declaration          : 17
elements             : 36 38
expression           : 6 13 14 16 20 23 24 25 26 27 28 29 30 30 31 32 38 39 40 40 41 41 42 42 43 44 45 72 73 73 74 74 75 75 76 76 85 85 86 86 87 87 88 88 89 89 90 90 91 92 92 93 93 94 94 95
function_declaration : 19
list_operation       : 21
parameters           : 6 7 8
poke_type            : 53
program              : 0
return_statement     : 22
statement            : 2 3 4 5 27 27
statements           : 1 2 4 6 7 25 25 26 27 28 29 30 32 33
type_specifier       : 6 7 8 9 28 45 52 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement SEMI statements
    (3) statements -> . statement SEMI
    (4) statements -> . statement statements
    (5) statements -> . statement
    (17) statement -> . declaration
    (18) statement -> . assignment
    (19) statement -> . function_declaration
    (20) statement -> . expression
    (21) statement -> . list_operation
    (22) statement -> . return_statement
    (23) statement -> . IMPORT expression AS IDENTIFIER
    (24) statement -> . IMPORT expression
    (25) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (26) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (27) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRACE statements RBRACE
    (28) statement -> . FOR LPAREN type_specifier IDENTIFIER IN expression RPAREN LBRACE statements RBRACE
    (29) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (30) statement -> . WHILE LPAREN expression RPAREN COLON expression LBRACE statements RBRACE
    (31) statement -> . SWITCH LPAREN expression RPAREN LBRACE case_statements RBRACE
    (35) statement -> . BREAK SEMI
    (45) declaration -> . type_specifier IDENTIFIER EQUALS expression
    (72) assignment -> . IDENTIFIER EQUALS expression
    (6) function_declaration -> . type_specifier IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE EQUALS expression
    (7) function_declaration -> . type_specifier IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (11) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (12) expression -> . IDENTIFIER PIPE IDENTIFIER LPAREN arguments RPAREN
    (36) expression -> . LBRACKET elements RBRACKET
    (37) expression -> . LBRACKET RBRACKET
    (40) expression -> . expression LBRACKET expression RBRACKET
    (44) expression -> . IDENTIFIER AT expression
    (73) expression -> . expression PLUS expression
    (74) expression -> . expression MINUS expression
    (75) expression -> . expression MUL expression
    (76) expression -> . expression DIV expression
    (77) expression -> . INTEGER_LITERAL
    (78) expression -> . MINUS INTEGER_LITERAL
    (79) expression -> . FLOAT_LITERAL
    (80) expression -> . MINUS FLOAT_LITERAL
    (81) expression -> . TRUE
    (82) expression -> . FALSE
    (83) expression -> . STRING_LITERAL
    (84) expression -> . IDENTIFIER
    (85) expression -> . expression GT expression
    (86) expression -> . expression LT expression
    (87) expression -> . expression EQ expression
    (88) expression -> . expression GE expression
    (89) expression -> . expression LE expression
    (90) expression -> . expression NE expression
    (91) expression -> . EXCLAMATION expression
    (92) expression -> . expression AMPERSAND expression
    (93) expression -> . expression PIPE expression
    (94) expression -> . expression HAT expression
    (95) expression -> . LPAREN expression RPAREN
    (41) list_operation -> . IDENTIFIER LBRACKET expression RBRACKET EQUALS expression
    (42) list_operation -> . IDENTIFIER LBRACKET expression RBRACKET LARROW expression
    (43) list_operation -> . IDENTIFIER MINUSEQ LBRACKET expression RBRACKET
    (16) return_statement -> . RETURN expression SEMI
    (46) type_specifier -> . INT
    (47) type_specifier -> . FLOAT
    (48) type_specifier -> . BOOL
    (49) type_specifier -> . STR
    (50) type_specifier -> . UNTYPED
    (51) type_specifier -> . VOID
    (52) type_specifier -> . LIST LT type_specifier GT
    (53) type_specifier -> . type_specifier LT poke_type GT

    IMPORT          shift and go to state 10
    IF              shift and go to state 12
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    IDENTIFIER      shift and go to state 11
    LBRACKET        shift and go to state 19
    INTEGER_LITERAL shift and go to state 21
    MINUS           shift and go to state 20
    FLOAT_LITERAL   shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    STRING_LITERAL  shift and go to state 25
    EXCLAMATION     shift and go to state 26
    LPAREN          shift and go to state 13
    RETURN          shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 30
    STR             shift and go to state 31
    UNTYPED         shift and go to state 32
    VOID            shift and go to state 33
    LIST            shift and go to state 34

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    function_declaration           shift and go to state 6
    expression                     shift and go to state 7
    list_operation                 shift and go to state 8
    return_statement               shift and go to state 9
    type_specifier                 shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . SEMI statements
    (3) statements -> statement . SEMI
    (4) statements -> statement . statements
    (5) statements -> statement .
    (2) statements -> . statement SEMI statements
    (3) statements -> . statement SEMI
    (4) statements -> . statement statements
    (5) statements -> . statement
    (17) statement -> . declaration
    (18) statement -> . assignment
    (19) statement -> . function_declaration
    (20) statement -> . expression
    (21) statement -> . list_operation
    (22) statement -> . return_statement
    (23) statement -> . IMPORT expression AS IDENTIFIER
    (24) statement -> . IMPORT expression
    (25) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (26) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (27) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LBRACE statements RBRACE
    (28) statement -> . FOR LPAREN type_specifier IDENTIFIER IN expression RPAREN LBRACE statements RBRACE
    (29) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (30) statement -> . WHILE LPAREN expression RPAREN COLON expression LBRACE statements RBRACE
    (31) statement -> . SWITCH LPAREN expression RPAREN LBRACE case_statements RBRACE
    (35) statement -> . BREAK SEMI
    (45) declaration -> . type_specifier IDENTIFIER EQUALS expression
    (72) assignment -> . IDENTIFIER EQUALS expression
    (6) function_declaration -> . type_specifier IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE EQUALS expression
    (7) function_declaration -> . type_specifier IDENTIFIER LPAREN parameters RPAREN LBRACE statements RBRACE
    (11) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (12) expression -> . IDENTIFIER PIPE IDENTIFIER LPAREN arguments RPAREN
    (36) expression -> . LBRACKET elements RBRACKET
    (37) expression -> . LBRACKET RBRACKET
    (40) expression -> . expression LBRACKET expression RBRACKET
    (44) expression -> . IDENTIFIER AT expression
    (73) expression -> . expression PLUS expression
    (74) expression -> . expression MINUS expression
    (75) expression -> . expression MUL expression
    (76) expression -> . expression DIV expression
    (77) expression -> . INTEGER_LITERAL
    (78) expression -> . MINUS INTEGER_LITERAL
    (79) expression -> . FLOAT_LITERAL
    (80) expression -> . MINUS FLOAT_LITERAL
    (81) expression -> . TRUE
    (82) expression -> . FALSE
    (83) expression -> . STRING_LITERAL
    (84) expression -> . IDENTIFIER
    (85) expression -> . expression GT expression
    (86) expression -> . expression LT expression
    (87) expression -> . expression EQ expression
    (88) expression -> . expression GE expression
    (89) expression -> . expression LE expression
    (90) expression -> . expression NE expression
    (91) expression -> . EXCLAMATION expression
    (92) expression -> . expression AMPERSAND expression
    (93) expression -> . expression PIPE expression
    (94) expression -> . expression HAT expression
    (95) expression -> . LPAREN expression RPAREN
    (41) list_operation -> . IDENTIFIER LBRACKET expression RBRACKET EQUALS expression
    (42) list_operation -> . IDENTIFIER LBRACKET expression RBRACKET LARROW expression
    (43) list_operation -> . IDENTIFIER MINUSEQ LBRACKET expression RBRACKET
    (16) return_statement -> . RETURN expression SEMI
    (46) type_specifier -> . INT
    (47) type_specifier -> . FLOAT
    (48) type_specifier -> . BOOL
    (49) type_specifier -> . STR
    (50) type_specifier -> . UNTYPED
    (51) type_specifier -> . VOID
    (52) type_specifier -> . LIST LT type_specifier GT
    (53) type_specifier -> . type_specifier LT poke_type GT

    SEMI            shift and go to state 35
    $end            reduce using rule 5 (statements -> statement .)
    RBRACE          reduce using rule 5 (statements -> statement .)
    CASE            reduce using rule 5 (statements -> statement .)
    DEFAULT         reduce using rule 5 (statements -> statement .)
    IMPORT          shift and go to state 10
    IF              shift and go to state 12
    FOR             shift and go to state 14
    WHILE           shift and go to state 16
    SWITCH          shift and go to state 17
    BREAK           shift and go to state 18
    IDENTIFIER      shift and go to state 11
    LBRACKET        shift and go to state 19
    INTEGER_LITERAL shift and go to state 21
    MINUS           shift and go to state 20
    FLOAT_LITERAL   shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    STRING_LITERAL  shift and go to state 25
    EXCLAMATION     shift and go to state 26
    LPAREN          shift and go to state 13
    RETURN          shift and go to state 27
    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 30
    STR             shift and go to state 31
    UNTYPED         shift and go to state 32
    VOID            shift and go to state 33
    LIST            shift and go to state 34

    statement                      shift and go to state 3
    statements                     shift and go to state 36
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    function_declaration           shift and go to state 6
    expression                     shift and go to state 7
    list_operation                 shift and go to state 8
    return_statement               shift and go to state 9
    type_specifier                 shift and go to state 15

state 4

    (17) statement -> declaration .

    SEMI            reduce using rule 17 (statement -> declaration .)
    IMPORT          reduce using rule 17 (statement -> declaration .)
    IF              reduce using rule 17 (statement -> declaration .)
    FOR             reduce using rule 17 (statement -> declaration .)
    WHILE           reduce using rule 17 (statement -> declaration .)
    SWITCH          reduce using rule 17 (statement -> declaration .)
    BREAK           reduce using rule 17 (statement -> declaration .)
    IDENTIFIER      reduce using rule 17 (statement -> declaration .)
    LBRACKET        reduce using rule 17 (statement -> declaration .)
    INTEGER_LITERAL reduce using rule 17 (statement -> declaration .)
    MINUS           reduce using rule 17 (statement -> declaration .)
    FLOAT_LITERAL   reduce using rule 17 (statement -> declaration .)
    TRUE            reduce using rule 17 (statement -> declaration .)
    FALSE           reduce using rule 17 (statement -> declaration .)
    STRING_LITERAL  reduce using rule 17 (statement -> declaration .)
    EXCLAMATION     reduce using rule 17 (statement -> declaration .)
    LPAREN          reduce using rule 17 (statement -> declaration .)
    RETURN          reduce using rule 17 (statement -> declaration .)
    INT             reduce using rule 17 (statement -> declaration .)
    FLOAT           reduce using rule 17 (statement -> declaration .)
    BOOL            reduce using rule 17 (statement -> declaration .)
    STR             reduce using rule 17 (statement -> declaration .)
    UNTYPED         reduce using rule 17 (statement -> declaration .)
    VOID            reduce using rule 17 (statement -> declaration .)
    LIST            reduce using rule 17 (statement -> declaration .)
    $end            reduce using rule 17 (statement -> declaration .)
    RBRACE          reduce using rule 17 (statement -> declaration .)
    CASE            reduce using rule 17 (statement -> declaration .)
    DEFAULT         reduce using rule 17 (statement -> declaration .)
    RPAREN          reduce using rule 17 (statement -> declaration .)


state 5

    (18) statement -> assignment .

    SEMI            reduce using rule 18 (statement -> assignment .)
    IMPORT          reduce using rule 18 (statement -> assignment .)
    IF              reduce using rule 18 (statement -> assignment .)
    FOR             reduce using rule 18 (statement -> assignment .)
    WHILE           reduce using rule 18 (statement -> assignment .)
    SWITCH          reduce using rule 18 (statement -> assignment .)
    BREAK           reduce using rule 18 (statement -> assignment .)
    IDENTIFIER      reduce using rule 18 (statement -> assignment .)
    LBRACKET        reduce using rule 18 (statement -> assignment .)
    INTEGER_LITERAL reduce using rule 18 (statement -> assignment .)
    MINUS           reduce using rule 18 (statement -> assignment .)
    FLOAT_LITERAL   reduce using rule 18 (statement -> assignment .)
    TRUE            reduce using rule 18 (statement -> assignment .)
    FALSE           reduce using rule 18 (statement -> assignment .)
    STRING_LITERAL  reduce using rule 18 (statement -> assignment .)
    EXCLAMATION     reduce using rule 18 (statement -> assignment .)
    LPAREN          reduce using rule 18 (statement -> assignment .)
    RETURN          reduce using rule 18 (statement -> assignment .)
    INT             reduce using rule 18 (statement -> assignment .)
    FLOAT           reduce using rule 18 (statement -> assignment .)
    BOOL            reduce using rule 18 (statement -> assignment .)
    STR             reduce using rule 18 (statement -> assignment .)
    UNTYPED         reduce using rule 18 (statement -> assignment .)
    VOID            reduce using rule 18 (statement -> assignment .)
    LIST            reduce using rule 18 (statement -> assignment .)
    $end            reduce using rule 18 (statement -> assignment .)
    RBRACE          reduce using rule 18 (statement -> assignment .)
    CASE            reduce using rule 18 (statement -> assignment .)
    DEFAULT         reduce using rule 18 (statement -> assignment .)
    RPAREN          reduce using rule 18 (statement -> assignment .)


state 6

    (19) statement -> function_declaration .

    SEMI            reduce using rule 19 (statement -> function_declaration .)
    IMPORT          reduce using rule 19 (statement -> function_declaration .)
    IF              reduce using rule 19 (statement -> function_declaration .)
    FOR             reduce using rule 19 (statement -> function_declaration .)
    WHILE           reduce using rule 19 (statement -> function_declaration .)
    SWITCH          reduce using rule 19 (statement -> function_declaration .)
    BREAK           reduce using rule 19 (statement -> function_declaration .)
    IDENTIFIER      reduce using rule 19 (statement -> function_declaration .)
    LBRACKET        reduce using rule 19 (statement -> function_declaration .)
    INTEGER_LITERAL reduce using rule 19 (statement -> function_declaration .)
    MINUS           reduce using rule 19 (statement -> function_declaration .)
    FLOAT_LITERAL   reduce using rule 19 (statement -> function_declaration .)
    TRUE            reduce using rule 19 (statement -> function_declaration .)
    FALSE           reduce using rule 19 (statement -> function_declaration .)
    STRING_LITERAL  reduce using rule 19 (statement -> function_declaration .)
    EXCLAMATION     reduce using rule 19 (statement -> function_declaration .)
    LPAREN          reduce using rule 19 (statement -> function_declaration .)
    RETURN          reduce using rule 19 (statement -> function_declaration .)
    INT             reduce using rule 19 (statement -> function_declaration .)
    FLOAT           reduce using rule 19 (statement -> function_declaration .)
    BOOL            reduce using rule 19 (statement -> function_declaration .)
    STR             reduce using rule 19 (statement -> function_declaration .)
    UNTYPED         reduce using rule 19 (statement -> function_declaration .)
    VOID            reduce using rule 19 (statement -> function_declaration .)
    LIST            reduce using rule 19 (statement -> function_declaration .)
    $end            reduce using rule 19 (statement -> function_declaration .)
    RBRACE          reduce using rule 19 (statement -> function_declaration .)
    CASE            reduce using rule 19 (statement -> function_declaration .)
    DEFAULT         reduce using rule 19 (statement -> function_declaration .)
    RPAREN          reduce using rule 19 (statement -> function_declaration .)


state 7

    (20) statement -> expression .
    (40) expression -> expression . LBRACKET expression RBRACKET
    (73) expression -> expression . PLUS expression
    (74) expression -> expression . MINUS expression
    (75) expression -> expression . MUL expression
    (76) expression -> expression . DIV expression
    (85) expression -> expression . GT expression
    (86) expression -> expression . LT expression
    (87) expression -> expression . EQ expression
    (88) expression -> expression . GE expression
    (89) expression -> expression . LE expression
    (90) expression -> expression . NE expression
    (92) expression -> expression . AMPERSAND expression
    (93) expression -> expression . PIPE expression
    (94) expression -> expression . HAT expression

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    SEMI            reduce using rule 20 (statement -> expression .)
    IMPORT          reduce using rule 20 (statement -> expression .)
    IF              reduce using rule 20 (statement -> expression .)
    FOR             reduce using rule 20 (statement -> expression .)
    WHILE           reduce using rule 20 (statement -> expression .)
    SWITCH          reduce using rule 20 (statement -> expression .)
    BREAK           reduce using rule 20 (statement -> expression .)
    IDENTIFIER      reduce using rule 20 (statement -> expression .)
    INTEGER_LITERAL reduce using rule 20 (statement -> expression .)
    FLOAT_LITERAL   reduce using rule 20 (statement -> expression .)
    TRUE            reduce using rule 20 (statement -> expression .)
    FALSE           reduce using rule 20 (statement -> expression .)
    STRING_LITERAL  reduce using rule 20 (statement -> expression .)
    EXCLAMATION     reduce using rule 20 (statement -> expression .)
    LPAREN          reduce using rule 20 (statement -> expression .)
    RETURN          reduce using rule 20 (statement -> expression .)
    INT             reduce using rule 20 (statement -> expression .)
    FLOAT           reduce using rule 20 (statement -> expression .)
    BOOL            reduce using rule 20 (statement -> expression .)
    STR             reduce using rule 20 (statement -> expression .)
    UNTYPED         reduce using rule 20 (statement -> expression .)
    VOID            reduce using rule 20 (statement -> expression .)
    LIST            reduce using rule 20 (statement -> expression .)
    $end            reduce using rule 20 (statement -> expression .)
    RBRACE          reduce using rule 20 (statement -> expression .)
    CASE            reduce using rule 20 (statement -> expression .)
    DEFAULT         reduce using rule 20 (statement -> expression .)
    RPAREN          reduce using rule 20 (statement -> expression .)
    LBRACKET        shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MUL             shift and go to state 40
    DIV             shift and go to state 41
    GT              shift and go to state 42
    LT              shift and go to state 43
    EQ              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    NE              shift and go to state 47
    AMPERSAND       shift and go to state 48
    PIPE            shift and go to state 49
    HAT             shift and go to state 50

  ! LBRACKET        [ reduce using rule 20 (statement -> expression .) ]
  ! MINUS           [ reduce using rule 20 (statement -> expression .) ]


state 8

    (21) statement -> list_operation .

    SEMI            reduce using rule 21 (statement -> list_operation .)
    IMPORT          reduce using rule 21 (statement -> list_operation .)
    IF              reduce using rule 21 (statement -> list_operation .)
    FOR             reduce using rule 21 (statement -> list_operation .)
    WHILE           reduce using rule 21 (statement -> list_operation .)
    SWITCH          reduce using rule 21 (statement -> list_operation .)
    BREAK           reduce using rule 21 (statement -> list_operation .)
    IDENTIFIER      reduce using rule 21 (statement -> list_operation .)
    LBRACKET        reduce using rule 21 (statement -> list_operation .)
    INTEGER_LITERAL reduce using rule 21 (statement -> list_operation .)
    MINUS           reduce using rule 21 (statement -> list_operation .)
    FLOAT_LITERAL   reduce using rule 21 (statement -> list_operation .)
    TRUE            reduce using rule 21 (statement -> list_operation .)
    FALSE           reduce using rule 21 (statement -> list_operation .)
    STRING_LITERAL  reduce using rule 21 (statement -> list_operation .)
    EXCLAMATION     reduce using rule 21 (statement -> list_operation .)
    LPAREN          reduce using rule 21 (statement -> list_operation .)
    RETURN          reduce using rule 21 (statement -> list_operation .)
    INT             reduce using rule 21 (statement -> list_operation .)
    FLOAT           reduce using rule 21 (statement -> list_operation .)
    BOOL            reduce using rule 21 (statement -> list_operation .)
    STR             reduce using rule 21 (statement -> list_operation .)
    UNTYPED         reduce using rule 21 (statement -> list_operation .)
    VOID            reduce using rule 21 (statement -> list_operation .)
    LIST            reduce using rule 21 (statement -> list_operation .)
    $end            reduce using rule 21 (statement -> list_operation .)
    RBRACE          reduce using rule 21 (statement -> list_operation .)
    CASE            reduce using rule 21 (statement -> list_operation .)
    DEFAULT         reduce using rule 21 (statement -> list_operation .)
    RPAREN          reduce using rule 21 (statement -> list_operation .)


state 9

    (22) statement -> return_statement .

    SEMI            reduce using rule 22 (statement -> return_statement .)
    IMPORT          reduce using rule 22 (statement -> return_statement .)
    IF              reduce using rule 22 (statement -> return_statement .)
    FOR             reduce using rule 22 (statement -> return_statement .)
    WHILE           reduce using rule 22 (statement -> return_statement .)
    SWITCH          reduce using rule 22 (statement -> return_statement .)
    BREAK           reduce using rule 22 (statement -> return_statement .)
    IDENTIFIER      reduce using rule 22 (statement -> return_statement .)
    LBRACKET        reduce using rule 22 (statement -> return_statement .)
    INTEGER_LITERAL reduce using rule 22 (statement -> return_statement .)
    MINUS           reduce using rule 22 (statement -> return_statement .)
    FLOAT_LITERAL   reduce using rule 22 (statement -> return_statement .)
    TRUE            reduce using rule 22 (statement -> return_statement .)
    FALSE           reduce using rule 22 (statement -> return_statement .)
    STRING_LITERAL  reduce using rule 22 (statement -> return_statement .)
    EXCLAMATION     reduce using rule 22 (statement -> return_statement .)
    LPAREN          reduce using rule 22 (statement -> return_statement .)
    RETURN          reduce using rule 22 (statement -> return_statement .)
    INT             reduce using rule 22 (statement -> return_statement .)
    FLOAT           reduce using rule 22 (statement -> return_statement .)
    BOOL            reduce using rule 22 (statement -> return_statement .)
    STR             reduce using rule 22 (statement -> return_statement .)
    UNTYPED         reduce using rule 22 (statement -> return_statement .)
    VOID            reduce using rule 22 (statement -> return_statement .)
    LIST            reduce using rule 22 (statement -> return_statement .)
    $end            reduce using rule 22 (statement -> return_statement .)
    RBRACE          reduce using rule 22 (statement -> return_statement .)
    CASE            reduce using rule 22 (statement -> return_statement .)
    DEFAULT         reduce using rule 22 (statement -> return_statement .)
    RPAREN          reduce using rule 22 (statement -> return_statement .)


state 10

    (23) statement -> IMPORT . expression AS IDENTIFIER
    (24) statement -> IMPORT . expression
    (11) expression -> . IDENTIFIER LPAREN arguments RPAREN
    (12) expression -> . IDENTIFIER PIPE IDENTIFIER LPAREN arguments RPAREN
    (36) expression -> . LBRACKET elements RBRACKET
    (37) expression -> . LBRACKET RBRACKET
    (40) expression -> . expression LBRACKET expression RBRACKET
    (44) expression -> . IDENTIFIER AT expression
    (73) expression -> . expression PLUS expression
    (74) expression -> . expression MINUS expression
    (75) expression -> . expression MUL expression
    (76) expression -> . expression DIV expression
    (77) expression -> . INTEGER_LITERAL
    (78) expression -> . MINUS INTEGER_LITERAL
    (79) expression -> . FLOAT_LITERAL
    (80) expression -> . MINUS FLOAT_LITERAL
    (81) expression -> . TRUE
    (82) expression -> . FALSE
    (83) expression -> . STRING_LITERAL
    (84) expression -> . IDENTIFIER
    (85) expression -> . expression GT expression
    (86) expression -> . expression LT expression
    (87) expression -> . expression EQ expression
    (88) expression -> . expression GE expression
    (89) expression -> . expression LE expression
    (90) expression -> . expression NE expression
    (91) expression -> . EXCLAMATION expression
    (92) expression -> . expression AMPERSAND expression
    (93) expression -> . expression PIPE expression
    (94) expression -> . expression HAT expression
    (95) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 52
    LBRACKET        shift and go to state 19
    INTEGER_LITERAL shift and go to state 21
    MINUS           shift and go to state 20
    FLOAT_LITERAL   shift and go to state 22
    TRUE            shift and go to state 23
    FALSE           shift and go to state 24
    STRING_LITERAL  shift and go to state 25
    EXCLAMATION     shift and go to state 26
    LPAREN          shift and go to state 13

    expression                     shift and go to state 51

state 11
